// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FullScreenLoader Snapshots Messages 1`] = `
<div
  className="sc-AykKD ggtnrM"
>
  <div
    className="sc-AykKE fffipx"
  />
</div>
`;

exports[`FullScreenLoader Snapshots Multiple words 1`] = `
<div
  className="sc-AykKD ggtnrM"
>
  <div
    className="sc-AykKE fffipx"
  >
    <div
      className="sc-AykKG hyXFcy"
    >
      Reticulating splines...
    </div>
  </div>
</div>
`;

exports[`FullScreenLoader Snapshots invalid Messages 1`] = `
<div
  className="sc-AykKD ggtnrM"
>
  <div
    className="sc-AykKE fffipx"
  />
</div>
`;
